--- a/server/front/TFGscada-app/src/assets/i18n/es.json
+++ b/server/front/TFGscada-app/src/assets/i18n/es.json
@@ -1,8 +1,18 @@
 {
+  "Acciones": "Acciones",
   "dashboard": {
     "Usuarios": "Usuarios",
     "Lugares": "Lugares",
     "Alarmas": "Alarmas",
     "Acciones": "Acciones"
+  },
+  "usersTable": {
+    "Username": "Nombre de usuario",
+    "name": "Nombre",
+    "correoElectronico": "Correo electrónico",
+    "phone": "Teléfono",
+    "celular": "Móvil",
+    "direccion": "Dirección",
+    "rol": "Rol"
   }
 }
