feat: traducción de los usuarios

--- a/server/front/TFGscada-app/src/assets/i18n/en.json
+++ b/server/front/TFGscada-app/src/assets/i18n/en.json
@@ -13,6 +13,10 @@
     "phone": "Phone",
     "celular": "Mobile phone",
     "direccion": "Address",
-    "rol": "Role"
+    "rol": "Role",
+    "modificarRegistro": "Modify record",
+    "delete": "Delete",
+    "pass": "Password",
+    "view": "View"
   }
 }
