--- a/server/front/TFGscada-app/src/assets/i18n/es.json
+++ b/server/front/TFGscada-app/src/assets/i18n/es.json
@@ -13,6 +13,10 @@
     "phone": "Teléfono",
     "celular": "Móvil",
     "direccion": "Dirección",
-    "rol": "Rol"
+    "rol": "Rol",
+    "modificarRegistro": "Modificar registro",
+    "delete": "Borrar",
+    "pass": "Contraseña",
+    "view": "Ver"
   }
 }
