feat: generate map

--- a/server/front/TFGscada-app/src/assets/i18n/en.json
+++ b/server/front/TFGscada-app/src/assets/i18n/en.json
@@ -48,6 +48,7 @@
     "measurementsHistory": "Measurements history",
     "measurementsPlace": "Measurements place",
     "outputs": "Outputs",
+    "map": "Map",
     "placesTable": {
       "latitude": "Latitude",
       "longitude": "Longitude",
