--- a/server/front/TFGscada-app/src/assets/i18n/es.json
+++ b/server/front/TFGscada-app/src/assets/i18n/es.json
@@ -48,6 +48,7 @@
     "measurementsHistory": "Historial de mediciones",
     "measurementsPlace": "Mediciones de lugar",
     "outputs": "Salidas",
+    "map": "Mapa",
     "placesTable": {
       "latitude": "Latitud",
       "longitude": "Longitud",
