--- a/server/front/TFGscada-app/src/assets/i18n/es.json
+++ b/server/front/TFGscada-app/src/assets/i18n/es.json
@@ -4,6 +4,9 @@
   "Acciones": "Acciones",
   "Si": "Si",
   "No": "No",
+  "ItemsPerPage": "Elementos por página",
+  "nextPageLabel": "Próxima página",
+  "previousPageLabel": "Página previa",
   "dashboard": {
     "Usuarios": "Usuarios",
     "Lugares": "Lugares",
