feat: correct dates and form

--- a/server/front/TFGscada-app/src/assets/i18n/en.json
+++ b/server/front/TFGscada-app/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "ItemsPerPage": "Items per page",
   "nextPageLabel": "Next page",
   "previousPageLabel": "Previus page",
+  "noResultsFound": "No results found",
   "dashboard": {
     "Usuarios": "Users",
     "Lugares": "Places",
