--- a/server/front/TFGscada-app/src/assets/i18n/es.json
+++ b/server/front/TFGscada-app/src/assets/i18n/es.json
@@ -7,6 +7,7 @@
   "ItemsPerPage": "Elementos por página",
   "nextPageLabel": "Próxima página",
   "previousPageLabel": "Página previa",
+  "noResultsFound": "No se han encontrado resultados",
   "dashboard": {
     "Usuarios": "Usuarios",
     "Lugares": "Lugares",
